--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 body {
     width: 100%;
+    background-color: #b01100;
+    height: 100vh;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+button {
+    padding: 15px 20px;
+    margin: 2rem auto;
+    font-size: 20px;
+    border: 0;
+
+}
+.text {
+    color: white;
+    font-size: 22px;
+    text-align: center;
+    font-family: monospace;
 }
